--- a/static/index.html
+++ b/static/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
 </head>
 <body>
     <div id="app">hello</div>
-    <script src="./bundle.js"></script>
+    <script src="./bundle.js" type='text/javascript'></script>
 </body>
 </html>
